# zap-home-assistant

./: .pre-commit-config.yaml  .pylintrc  CLAUDE.md  README.md  docker-compose.yml  docs.md  hacs.json  pyproject.toml  pytest.ini  requirements_dev.txt  requirements_test.txt  test_connection.py
.github/workflows/: hacs.yml  hassfest.yml  release.yml  test.yml
config/: home-assistant.log.1
custom_components/sourceful_zap/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  manifest.json  obis_definitions.py  options_flow.py  p1_coordinator.py  p1_sensor.py  sensor.py  strings.json  system_data_coordinator.py  system_sensor.py
custom_components/sourceful_zap/translations/: en.json
tests/: README.md  __init__.py  conftest.py  test_api.py  test_config_flow.py  test_config_flow_integration.py  test_config_flow_unit.py  test_config_schema.py  test_coordinator.py  test_coordinator_extended.py  test_gateway_coordinator.py  test_init.py  test_sensor.py  test_sensor_unit.py  test_should_create_sensor.py  test_validate_numeric.py
